[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyjpboatrace"]

[project]
name = "pyjpboatrace"
dynamic = ["version"]
license-files = ["LICENSE"]
authors = [{ name = "hmasdev", email = "hmasuidev1com@gmail.com" }]
description = "PyJPBoatrace: Python-based Japanese boatrace tools"
readme = "README.md"
keywords = ["kyotei", "boatrace", "data analysis"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

dependencies = [
    "beautifulsoup4>=4.11.1",
    "requests>=2.28.1",
    "selenium>=4.6.0",
    "types-beautifulsoup4",
    "types-requests",
]

[project.urls]
Repository = "http://github.com/hmasdev/pyjpboatrace"

[project.optional-dependencies]
dev = [
    "autopep8",
    "flake8>=3.8.4",
    "Jinja2",
    "mypy>=0.812",
    "pytest>=6.1.2",
    "pytest-cov>=2.10.1",
    "pytz",
    "twine",
    "types-pytz",
    "wheel",
]

[tool.setuptools.dynamic]
version = { attr = "pyjpboatrace.__version__" }

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=pyjpboatrace --cov-branch --cov-report=term-missing -m 'not spending_money'"
testpaths = ["tests"]
markers = [
    "integrate: integration test",
    "spending_money: test with spending money",
]
