[metadata]
name = pyjpboatrace
version = attr: pyjpboatrace.__version__
license_files = LICENSE
author = hmasdev
author_email = hmasuidev1com@gmail.com
url = http://github.com/hmasdev/pyjpboatrace
description = PyJPBoatrace: Python-based Japanese boatrace tools
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    kyotei
    boatrace
    data analysis
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
packages = find:

install_requires = 
    beautifulsoup4>=4.9.3
    requests>=2.25.0
    selenium>=3.141.0
    webdriver-manager==3.2.2
    msedge-selenium-tools

tests_require = 
    pytest>=6.1.2
    pytest-cov>=2.10.1
    flake8>=3.8.4

[options.packages.find]
exclude =
    tests*
