[metadata]
name = pyjpboatrace
version = attr: pyjpboatrace.__version__
license_files = LICENSE
author = hmasdev
author_email = hmasuidev1com@gmail.com
url = http://github.com/hmasdev/pyjpboatrace
description = PyJPBoatrace: Python-based Japanese boatrace tools
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    kyotei
    boatrace
    data analysis
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
packages = find:

install_requires =
    beautifulsoup4>=4.11.1
    requests>=2.28.1
    selenium>=4.6.0
    types-beautifulsoup4
    types-requests

[options.extras_require]
dev =
    pytest>=6.1.2
    pytest-cov>=2.10.1
    flake8>=3.8.4
    mypy>=0.812

[options.packages.find]
exclude =
    tests*
